# python-token-generator

./: .env.example  .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/: renovate.json
docs/: flow.md
makefiles/: env.mk
src/: __main__.py  cli.py  crypto.py  exceptions.py  jwt_handler.py  logger.py  settings.py
tests/: __init__.py  test_cli.py  test_crypto.py  test_jwt.py  test_settings.py
